--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>새 상품 등록</title>
@@ -13,7 +13,7 @@
     </div>
     <div>
         <label for="price">가격:</label>
-        <input type="text" id="price" name="price"/>
+        <input type="number" id="price" name="price"/>
     </div>
     <div>
         <label for="imageUrl">이미지주소:</label>
