--- a/src/main/resources/templates/productModForm.html
+++ b/src/main/resources/templates/productModForm.html
@@ -56,20 +56,20 @@
 </head>
 <body>
 <h1>Mod Product</h1>
-<form th:action="'/api/products/' + ${id}" method="post">
+<form th:action="'/api/products/' + ${product.id}" method="post">
     <input type="hidden" id="put" name="_method" value="put">
 
     <label for="id">Id:</label>
-    <input type="text" id="id" name="id" th:value="${id}" required>
+    <input type="text" id="id" name="id" th:value="${product.id}" readonly>
 
     <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
+    <input type="text" id="name" name="name" th:value="${product.name}" required>
 
     <label for="price">Price:</label>
-    <input type="number" id="price" name="price" required>
+    <input type="number" id="price" name="price" th:value="${product.price}" required>
 
     <label for="imageUrl">Image URL:</label>
-    <input type="text" id="imageUrl" name="imageUrl" required>
+    <input type="text" id="imageUrl" name="imageUrl" th:value="${product.imageUrl}" required>
 
     <button type="submit">Submit</button>
 </form>
