feat : 관리자 페이지 내 상품 추가 기능 추가

--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -6,6 +6,9 @@
     </head>
     <body>
       <p>Product Manage</p>
+      <form action="/admin/new" name="product_form" method="get">
+        <button>add product</button>
+      </form>
       <div>
         <table>
           <thead>
@@ -19,7 +22,7 @@
           <tbody>
             <tr th:each="product: ${products}">
               <td th:text="${product.id()}"></td>
-              <td th:text="${product.name()}"></td>
+              <td th:text="${product.name()}"></td>a
               <td th:text="${product.price()}"></td>
               <td th:text="${product.imageUrl()}"></td>
             </tr>
