--- a/src/main/resources/templates/admin/insertForm.html
+++ b/src/main/resources/templates/admin/insertForm.html
@@ -6,7 +6,8 @@
   <title>admin - insert</title>
 </head>
 <body>
-<div class="container" style="display: flex; flex-direction: column; justify-content: center; margin-top: 50px;">
+<div class="container"
+     style="display: flex; flex-direction: column; justify-content: center; margin-top: 50px;">
   <h2 class="py-4 text-center border-bottom mb-5">상품 추가</h2>
   <div>
     <form th:action method="post">
@@ -20,14 +21,17 @@
       </div>
       <div class="mb-3">
         <label for="imageUrl" class="mb-2">상품 이미지</label>
-        <input type="text" id="imageUrl" name="imageUrl" class="form-control" placeholder="상품 이미지 주소를 입력하세요.">
+        <input type="text" id="imageUrl" name="imageUrl" class="form-control"
+               placeholder="상품 이미지 주소를 입력하세요.">
       </div>
       <div class="row mt-5">
         <div class="col">
           <button class="btn btn-primary w-100" type="submit">등록</button>
         </div>
         <div class="col">
-          <button class="btn btn-primary w-100" th:onclick="|location.href='@{/admin/products}'|" onclick="location.href='products.html'" type="button">취소</button>
+          <button class="btn btn-primary w-100" th:onclick="|location.href='@{/admin/products}'|"
+                  onclick="location.href='products.html'" type="button">취소
+          </button>
         </div>
       </div>
     </form>
