--- a/src/main/resources/templates/updateproductform.html
+++ b/src/main/resources/templates/updateproductform.html
@@ -6,23 +6,22 @@
 <body>
 <h1>Update Product</h1>
 <form th:action="@{/api/products/update}" th:object="${productDto}" method="post">
-  <!-- Thymeleaf의 hidden 필드를 사용하여 PUT 메서드로 오버라이딩 -->
   <input type="hidden" name="_method" value="put"/>
 
   <div>
-    <label for="id">ID:</label>
+    <label for="id">Product ID:</label>
     <input type="number" id="id" th:field="*{id}" placeholder="Enter product ID"/>
   </div>
   <div>
-    <label for="name">Name:</label>
+    <label for="name">New Name:</label>
     <input type="text" id="name" th:field="*{name}" placeholder="Enter product name"/>
   </div>
   <div>
-    <label for="price">Price:</label>
+    <label for="price">New Price:</label>
     <input type="number" id="price" th:field="*{price}" placeholder="Enter product price"/>
   </div>
   <div>
-    <label for="imageUrl">Image URL:</label>
+    <label for="imageUrl">New Image URL:</label>
     <input type="text" id="imageUrl" th:field="*{imageUrl}" placeholder="Enter image URL"/>
   </div>
   <div>
