feat: 새 상품을 추가하는 버튼 생성
상품을 추가하는 모달 창을 띄우는 버튼 생성

--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -7,3 +7,7 @@
 <body>
 <div class="container">
   <h1 class="my-4">Manage <strong>Products</strong></h1>
+
+  <div class="mb-4">
+    <button class="btn btn-success" data-toggle="modal" data-target="#productModal">Add New Product</button>
+  </div>
