--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -73,3 +73,22 @@
     </div>
   </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+  function editProduct(id) {
+    fetch(`/products/${id}`)
+    .then(response => response.json())
+    .then(product => {
+      document.getElementById('name').value = product.name;
+      document.getElementById('price').value = product.price;
+      document.getElementById('imageUrl').value = product.imageUrl;
+      document.getElementById('productForm').action = `/products/${id}`;
+      $('#productModal').modal('show');
+    });
+  }
+</script>
+</body>
+</html>
