--- a/src/main/resources/templates/addproductform.html
+++ b/src/main/resources/templates/addproductform.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Add Product</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" th:href="@{/css/add-product.css}">
 </head>
 <body>
 <h1>Add New Product</h1>
