--- a/src/main/resources/templates/deleteproduct.html
+++ b/src/main/resources/templates/deleteproduct.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Delete Product</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <link rel="stylesheet" th:href="@{/css/delete-product.css}">
 </head>
 <body>
 <h1>Delete Product</h1>
