--- a/src/main/resources/templates/updateproductform.html
+++ b/src/main/resources/templates/updateproductform.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Update Product</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" th:href="@{/css/update-product.css}">
+
 </head>
 <body>
 <h1>Update Product</h1>
