--- a/src/main/resources/templates/edit_product_form.html
+++ b/src/main/resources/templates/edit_product_form.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>상품 수정</title>
 </head>
 <body>
   <h1>상품 수정</h1>
-  <form action="/admin/products/edit/id" method="post">
+  <form th:action="@{/admin/products/edit/{id}(id=${product.id})}" th:object="${product}" method="post">
     <input type="hidden" name="_method" value="put"/>
-    <div>
-      <p style="color:red;">중복된 id입니다.</p>
+    <div th:if="${error}">
+      <p th:text="${error}" style="color:red;"></p>
     </div>
     <div>
       <label for="id">ID:</label>
-      <input type="text" id="id"/>
+      <input type="text" id="id" th:field="*{id}"/>
     </div>
     <div>
       <label for="name">상품 이름:</label>
-      <input type="text" id="name"/>
+      <input type="text" id="name" th:field="*{name}"/>
     </div>
     <div>
       <label for="price">가격:</label>
-      <input type="text" id="price"/>
+      <input type="text" id="price" th:field="*{price}"/>
     </div>
     <div>
       <label for="imageUrl">Image URL:</label>
-      <input type="text" id="imageUrl"/>
+      <input type="text" id="imageUrl" th:field="*{imageUrl}"/>
     </div>
     <div>
       <button type="submit">Submit</button>
