feat : 관리자 페이지 내 삭제 기능 추가

--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -25,7 +25,14 @@
               <td th:text="${product.name()}"></td>a
               <td th:text="${product.price()}"></td>
               <td th:text="${product.imageUrl()}"></td>
-              <td> <a th:href="@{'/admin/edit/' + ${product.id}}">Edit</a></td>
+              <td> 
+                <form th:action="@{'/admin/edit/' + ${product.id}}" method="get">
+                  <button type="submit">Edit</button>
+                </form>
+                <form th:action="@{'/admin/delete/' + ${product.id}}" method="post">
+                  <button type="submit">Delete</button>
+                </form>
+              </td>
             </tr>
           </tbody>
         </table>
