--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -37,7 +37,7 @@
         <td th:text="${product.price}"></td>
         <td th:text="${product.imageUrl}"></td>
         <td><button class="btn btn-primary float-end"
-                    th:onclick="|location.href='/api/product/' + [[${product.id}]]|"
+                    th:onclick="|location.href='/product?id=${product.id}'|"
                     type="button">상품 수정</button></td>
         <td><button class="btn btn-primary float-end"
                     th:onclick="|deleteProduct([[${product.id}]])|"
