--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -10,32 +10,37 @@
         <th>Name</th>
         <th>Price</th>
         <th>Image</th>
+        <th>Actions</th>
     </tr>
     <tr th:each="menu : ${menus}">
         <td th:text="${menu.name}">Menu Name</td>
         <td th:text="${menu.price}">Menu Price</td>
-        <td><img th:src="@{${menu.imageUrl}}" alt="Menu Image"></td>
+        <td><img th:src="${menu.imageUrl}" alt="Menu Image"></td>
+        <td>
+            <a th:href="@{/menu/edit/{id}(id=${menu.id})}">Edit</a>
+        </td>
     </tr>
 </table>
 
-    <form th:action="@{/menu}" method="post">
-        <ul>
-            <li>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" />
-            </li>
-            <li>
-                <label for="price">Price:</label>
-                <input type="number" id="price" name="price" />
-            </li>
-            <li>
-                <label for="imageUrl">ImageUrl:</label>
-                <input type="url" id="imageUrl" name="image" />
-            </li>
-            <li class="button">
-                <button type="submit">Send your message</button>
-            </li>
-        </ul>
-    </form>
+<h2>ADD DATA</h2>
+<form th:action="@{/menu}" method="post">
+    <ul>
+        <li>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" />
+        </li>
+        <li>
+            <label for="price">Price:</label>
+            <input type="number" id="price" name="price" />
+        </li>
+        <li>
+            <label for="imageUrl">ImageUrl:</label>
+            <input type="url" id="imageUrl" name="imageUrl" />
+        </li>
+        <li class="button">
+            <button type="submit">Submit</button>
+        </li>
+    </ul>
+</form>
 </body>
 </html>
