--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -7,7 +7,7 @@
   <title>상품 등록 화면</title>
 </head>
 <body>
-  <form action="/api/product" method="post">
+  <form action="/admin/product" method="post">
     <div class="row mb-3">
       <label for="name" class="col-sm-2 col-form-label">상품명</label>
       <div class="col-sm-10">
