feat : 삭제 버튼 추가

--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -19,6 +19,9 @@
         <td>
             <a th:href="@{/menu/edit/{id}(id=${menu.id})}">Edit</a>
         </td>
+        <td>
+            <a th:href="@{/menu/delete/{id}(id=${menu.id})}">Delete</a>
+        </td>
     </tr>
 </table>
 
