--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -266,7 +266,7 @@
                     });
                 }
                 closeModal();
-                fetchProducts();
+                await fetchProducts();
             } catch (error) {
                 console.error('Failed to save product:', error);
             }
