--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -30,7 +30,55 @@
     </div>
 </form>
 
-<h2>상품 목록</h2>
+<h2>상품 조회</h2>
+<form action="/product/search" method="get">
+    <div>
+        <label for="keyword">조회하고자 하는 상품의 이름을 입력하세요: </label>
+        <input type="text" id="keyword" name="keyword" required>
+        <button type="submit">조회</button>
+    </div>
+</form>
+
+<h2>조회 결과</h2>
+<table id="searchResults">
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Image URL</th>
+        <th>Action</th>
+    </tr>
+    </thead>
+    <tbody th:each="sProduct : ${searchResults}">
+    <tr>
+        <form th:action="@{/product/modify}" method="post">
+            <td>
+                <input type="number" id="s-product.id" name="id" th:value="${sProduct.id}" readonly />
+            </td>
+            <td>
+                <input type="text" id="s-product.name" name="name" th:value="${sProduct.name}" />
+            </td>
+            <td>
+                <input type="number" id="s-product.price" name="price" th:value="${sProduct.price}" />
+            </td>
+            <td>
+                <input type="text" id="s-product.imageUrl" name="imageUrl" th:value="${sProduct.imageUrl}" />
+            </td>
+            <td>
+                <button type="submit">수정</button>
+            </td>
+        </form>
+        <td>
+            <form th:action="@{/product/delete/{id}(id=${sProduct.id})}" method="post">
+                <button type="submit">삭제</button>
+            </form>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+<h2>전체 상품 목록</h2>
 <table id="productList">
     <thead>
     <tr>
@@ -45,16 +93,16 @@
     <tr>
         <form th:action="@{/product/modify}" method="post">
             <td>
-                <input type="number" id="id-[[${product.id}]]" name="id" th:value="${product.id}" readonly />
+                <input type="number" id="product.id" name="id" th:value="${product.id}" readonly />
             </td>
             <td>
-                <input type="text" id="name-[[${product.id}]]" name="name" th:value="${product.name}" />
+                <input type="text" id="product.name" name="name" th:value="${product.name}" />
             </td>
             <td>
-                <input type="number" id="price-[[${product.id}]]" name="price" th:value="${product.price}" />
+                <input type="number" id="product.price" name="price" th:value="${product.price}" />
             </td>
             <td>
-                <input type="text" id="imageUrl-[[${product.id}]]" name="imageUrl" th:value="${product.imageUrl}" />
+                <input type="text" id="product.imageUrl" name="imageUrl" th:value="${product.imageUrl}" />
             </td>
             <td>
                 <button type="submit">수정</button>
