style: 상품 수정 및 삭제 기능 표시

--- a/src/main/resources/templates/admin-product-list.html
+++ b/src/main/resources/templates/admin-product-list.html
@@ -24,8 +24,8 @@
         <td th:text="${product.price}"></td>
         <td><img th:src="${product.imageUrl()}" alt="img"></td>
         <td>
-          <a th:href="@{/admin/edit/{id}(id=${product}.id)}"></a>
-          <a th:href="@{/admin/delete/{id}(id=${product}.id)}"></a>
+          <a th:href="@{/admin/edit/{id}(id=${product}.id)}">Edit</a>
+          <a th:href="@{/admin/delete/{id}(id=${product}.id)}">Delete</a>
         </td>
       </tr>
     </tbody>
