--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -12,7 +12,7 @@
     <input type="hidden" th:if="${product.id != 0}" name="_method" value="put"/>
     <div class="form-group">
       <label for="id">ID</label>
-      <input type="number" class="form-control" id="id" th:field="*{id}" th:attr="readonly=${product.id != 0}" required>
+      <input type="number" class="form-control" id="id" th:field="*{id}" th:attr="readonly=${product.id != 0}" min="1" required>
     </div>
     <div class="form-group">
       <label for="name">Name</label>
