refactor(products.html): thymeleaf를 좀더 횽ㄹ적으로 사용할수있도록 수정

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Product List</h1>
-<a th:href="@{/api/products/create}">Create New Product</a>
+<a th:href="@{/admin/products/new}">Create New Product</a>
 <table>
   <thead>
   <tr>
@@ -18,13 +18,15 @@
   </thead>
   <tbody>
   <tr th:each="product : ${products}">
-    <td th:text="${product.id}"></td>
-    <td th:text="${product.name}"></td>
-    <td th:text="${product.price}"></td>
-    <td><img th:src="${product.imageURL}" alt="Image" width="50"/></td>
+    <td th:text="${product.value.id()}"></td>
+    <td th:text="${product.value.name()}"></td>
+    <td th:text="${product.value.price()}"></td>
+    <td><img th:src="${product.value.imageUrl()}" alt="Image" width="50"/></td>
     <td>
-      <a th:href="@{/admin/products/edit/{id}(id=${product.id})}">Edit</a>
-      <a th:href="@{/admin/products/delete/{id}(id=${product.id})}">Delete</a>
+      <a th:href="@{/admin/products/edit/{id}(id=${product.value.id()})}">Edit</a>
+      <form th:action="@{/admin/products/delete/{id}(id=${product.value.id()})}" method="post" style="display:inline;">
+        <button type="submit">Delete</button>
+      </form>
     </td>
   </tr>
   </tbody>
