refactor(add_product.html): id 고정으로 인한 문제 해결 - id가 0으로 고정되어 HashMap에서 덮어써져서 저장이 안되는 오류를 직접 입력하게 만들어 고침

--- a/src/main/resources/templates/add_product.html
+++ b/src/main/resources/templates/add_product.html
@@ -6,7 +6,10 @@
 <body>
 <h1 th:text="${product == null || product.id() == 0} ? 'Create Product' : 'Edit Product'"></h1>
 <form th:action="@{${product == null || product.id() == 0} ? '/admin/products' : '/admin/products/edit/' + ${product.id()}}" th:object="${product}" method="post">
-  <input type="hidden" th:field="*{id}" />
+  <div>
+    <label for="id">Id</label>
+    <input type="number" id="id" th:field="*{id}" />
+  </div>
   <div>
     <label for="name">Name</label>
     <input type="text" id="name" th:field="*{name}" required/>
