refactor: 관리자 상품 추가 화면 ID 추가

--- a/src/main/resources/templates/product-add-form.html
+++ b/src/main/resources/templates/product-add-form.html
@@ -8,6 +8,10 @@
   <form th:action="@{'/admin/add'}">
     <input type="hidden"/>
     <div>
+      <label for="id">ID</label>
+      <input type="text" id="id" required/>
+    </div>
+    <div>
       <label for="name">Name</label>
       <input type="text" id="name" required/>
     </div>
