--- a/src/main/resources/templates/product-add-form.html
+++ b/src/main/resources/templates/product-add-form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Add New Product</h1>
-  <form th:action="@{'/admin/add'}">
+  <form th:action="@{'/admin/add'}" method="post">
     <input type="hidden"/>
     <div>
       <label for="id">ID</label>
