feat(addProduct.html): 상품 추가 페이지 html 구현, fix(index.html): URL 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
   <h1>Manage Products</h1>
 
 <!--  상품 추가 버튼 -->
-  <a class="btn btn-primary" th:href="@{/products/add}">Add New Product</a>
+  <a class="btn btn-primary" th:href="@{/api/products/add}">Add New Product</a>
 
   <table class="table table-striped">
     <thead>
