fix(ProductController.java, addProduct.html): 상품 추가 페이지 제출 경로 수정

--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -11,7 +11,7 @@
 
   <h1>Add Product</h1>
 
-  <form th:action="@{/api/products}" th:object="${product}" method="post">
+  <form th:action="@{/api/products/add}" th:object="${product}" method="post">
 
     <div class="form-group">
       <label>Name</label>
