--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,10 @@
       <td th:text="${product.name}">Product Name</td>
       <td th:text="${product.price}">Product Price</td>
       <td th:text="${product.imageUrl}">Product Image URL</td>
-<!--삭제, 수정 버튼 추가할 것-->
+      <td>
+        <a class="btn btn-warning" th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
+        <a class="btn btn-danger" th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>
+      </td>
     </tr>
     </tbody>
 
